--- a/SanBot.Core/SanBot.Core.csproj
+++ b/SanBot.Core/SanBot.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Sanbot.Database\SanBot.Database.csproj" />
     <ProjectReference Include="..\..\SanProtocol\SanProtocol\SanProtocol.csproj" />
     <ProjectReference Include="..\..\SanWebApi\SanWebApi\SanWebApi.csproj" />
   </ItemGroup>
