--- a/SanBot.Core/SanBot.Core.csproj
+++ b/SanBot.Core/SanBot.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Concentus" Version="1.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Sanbot.Database\SanBot.Database.csproj" />
     <ProjectReference Include="..\..\SanProtocol\SanProtocol\SanProtocol.csproj" />
     <ProjectReference Include="..\..\SanWebApi\SanWebApi\SanWebApi.csproj" />
